with native implementation

--- a/drb-day/app/src/main/res/layout/content_list_slides.xml
+++ b/drb-day/app/src/main/res/layout/content_list_slides.xml
@@ -9,11 +9,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dmahmoud.drb.drb_day.ListSlidesActivity"
+    tools:context=".ui.ListSlidesActivity"
     tools:showIn="@layout/activity_list_slides">
 
-    <TextView
+
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/list_slides"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
