--- a/drb-day/app/src/main/res/menu/menu_list_slides.xml
+++ b/drb-day/app/src/main/res/menu/menu_list_slides.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.dmahmoud.drb.drb_day.ListSlidesActivity">
+    tools:context=".ui.ListSlidesActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
