--- a/drb-day/app/src/main/res/layout/content_list_slides.xml
+++ b/drb-day/app/src/main/res/layout/content_list_slides.xml
@@ -14,10 +14,7 @@
 
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_slides"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_slides" />
 </RelativeLayout>
